working paths redirects in webpage server restart when hitting Play

--- a/src/pci_template.tmpl
+++ b/src/pci_template.tmpl
@@ -10,10 +10,10 @@
 		<div class="content">
 			<h1>Bienvenido <%= user_id %>!</h1>
 			<div class = "button_wrapper">
-				<div class = "big_button" id="problems">
+				<div class = "big_button" id="problems" onclick="location.href='/pci/problemsHome'">
 					Problemas
 				</div>
-				<div class = "big_button" id="ideas">
+				<div class = "big_button" id="ideas" onclick="location.href='/pci/ideasHome'">
 					Ideas
 				</div>
 			</div>
