--- a/src/pci_template.tmpl
+++ b/src/pci_template.tmpl
@@ -33,7 +33,7 @@
 		<div class="content">
 			<h1>Problemas</h1>
 			<div class = "button_wrapper">
-				<% foreach problem in problems %>  
+				<% foreach problem in *problems %>  
  					<% item %>
 						<div class = "publication" onclick="location.href='/pci/problem/<%= problem->id %>'">
 							<%= problem->id %>:<%= problem->description %>
@@ -63,13 +63,34 @@
 					Descripcion: <%= problem->description %>
 				</div>
 			</div>
+			<h2>Aclaraciones</h2>
+			<% foreach clarification in *clarifications %>
+				<% item %>
+					<div class = "publication">
+						ID: <%= clarification->id %> Pregunta: <%= clarification->question %>
+						Respuesta: <%= clarification->answer %>
+					</div>
+				<% end %>
+				<% empty %>
+				No hay aclaraciones
+			<% end %>
 			<h2>Solucion</h2>
-			<% if accepted_solution %>
+			<% if problem->is_solved %>
 				<div class= "publication">
 					Descripcion: <%= accepted_solution->description %>
 				</div>
 			<% else %>
 				<p>No hay una solucion aceptada</p>
+			<% end %>
+			<h2>Soluciones Propuestas</h2>
+			<% foreach solution in *solutions %>
+				<% item %>
+					<div class = "publication">
+						ID: <%= solution->id %> Descripcion: <%= solution->description %>
+					</div>
+				<% end %>
+				<% empty %>
+				No hay soluciones propuestas
 			<% end %>
 		</div>
 	</body>  
