--- a/src/pci_template.tmpl
+++ b/src/pci_template.tmpl
@@ -76,7 +76,7 @@
 			<% end %>
 			<h2>Solucion</h2>
 			<% if problem->is_solved %>
-				<div class= "publication">
+				<div class= "publication" onclick="location.href='/pci/solution/<%= accepted_solution->id %>'">
 					Descripcion: <%= accepted_solution->description %>
 				</div>
 			<% else %>
@@ -85,7 +85,7 @@
 			<h2>Soluciones Propuestas</h2>
 			<% foreach solution in *solutions %>
 				<% item %>
-					<div class = "publication">
+					<div class = "publication" onclick="location.href='/pci/solution/<%= solution->id %>'">
 						ID: <%= solution->id %> Descripcion: <%= solution->description %>
 					</div>
 				<% end %>
@@ -97,4 +97,37 @@
 <html>  
 <% end template %>  
 <% end view %>  
+
+<% view solutionInfo uses main_screen_content::solutionInfo %>  
+<% template render() %>
+<html> 
+	<head>
+	    <link href="/css/problemsHome.css" rel="stylesheet" type="text/css">
+	</head>
+	<body>
+		<div class="content">
+			<h1>Solucion <%= solution->id %></h1>
+			<div class = "button_wrapper">
+				<div class = "publication">
+					Descripcion: <%= solution->description %>
+				</div>
+			</div>
+			<h2>Aclaraciones</h2>
+			<% foreach clarification in *clarifications %>
+				<% item %>
+					<div class = "publication">
+						ID: <%= clarification->id %> Pregunta: <%= clarification->question %>
+						Respuesta: <%= clarification->answer %>
+					</div>
+				<% end %>
+				<% empty %>
+				No hay aclaraciones
+			<% end %>
+		</div>
+	</body>  
+<html>  
+<% end template %>  
+<% end view %>  
+
+
 <% end skin %>  
