--- a/tmpl/Welcome.tmpl
+++ b/tmpl/Welcome.tmpl
@@ -11,18 +11,11 @@
 	
 		<% template body_content() %>
 			<h1>Bienvenido!</h1>
-			<div>
-				<div class="big_button" id="welcome_problems_big_button">
-					<a href="/pci/problems">
-						Problems
-					</a>
-				</div>
-				<div class="big_button" id="welcome_ideas_big_button">
-					<a href="/pci/ideas">
-						Ideas
-					</a>
-				</div>
-			</div>
+			<a href="/pci/sign_in">Sign in</a>
+			<br />
+			<a href="/pci/problems">Problems</a>
+			<br />
+			<a href="/pci/ideas">Ideas</a>
 		<% end template %>
 	
 	<% end view %>
