--- a/tmpl/SignIn.tmpl
+++ b/tmpl/SignIn.tmpl
@@ -12,19 +12,7 @@
 		<% template body_content() %>
 			<h1>Sign in</h1>
 			<form action="" method="post">
-				<div>
-					User
-				</div>
-				<div>
-					<input type="text" />
-				</div>
-				<div>
-					Password
-				</div>
-				<div>
-					<input type="password" />
-				</div>
-				<input type="submit" value="Sign in" />
+				<% form as_p form_info %>
 			</form>
 		<% end template %>
 	
