--- a/tmpl/Ideas.tmpl
+++ b/tmpl/Ideas.tmpl
@@ -1,17 +1,22 @@
 
 <% c++ #include "ViewContent.h" %>
 
-<% skin test_skin %>
+<% skin pci_skin %>
 	<% view ideas_view uses ViewContent::IdeasContent extends template_view %>
 	
-		<% template head_links() %>
-			<% include template_view::head_links() %>
+	
+		<% template css_links() %>
+			<% include template_view::css_links() %>
+			<link href="/css/header_bar.css" rel="stylesheet" type="text/css" />
 			<link href="/css/ideas.css" rel="stylesheet" type="text/css" />
 		<% end template %>
 	
-		<% template body_content() %>
-			<h1>Ideas</h1>
+	
+		<% template page_content() %>
+			<% include template_view::header_bar() %>
+			<% include template_view::ideas() %>
 		<% end template %>
+	
 	
 	<% end view %>
 <% end skin %>
