--- a/tmpl/Index.tmpl
+++ b/tmpl/Index.tmpl
@@ -2,21 +2,21 @@
 <% c++ #include "ViewContent.h" %>
 
 <% skin pci_skin %>
-	<% view problems_view uses ViewContent::ProblemsContent extends template_view %>
+	<% view index_view uses ViewContent::IndexContent extends template_view %>
 	
 	
 		<% template css_links() %>
 			<% include template_view::css_links() %>
 			<link href="/css/header_bar.css" rel="stylesheet" type="text/css" />
-			<link href="/css/navigation_menu.css" rel="stylesheet" type="text/css" />
-			<link href="/css/problems.css" rel="stylesheet" type="text/css" />
+			<link href="/css/index.css" rel="stylesheet" type="text/css" />
+			<link href="/css/information_footer.css" rel="stylesheet" type="text/css" />
 		<% end template %>
 	
 	
 		<% template page_content() %>
 			<% include template_view::header_bar() %>
-			<% include template_view::navigation_menu() %>
-			<% include template_view::problems(problems) %>
+			<% include template_view::index() %>
+			<% include template_view::information_footer() %>
 		<% end template %>
 	
 	
