--- a/tmpl/SignIn.tmpl
+++ b/tmpl/SignIn.tmpl
@@ -1,20 +1,23 @@
 
 <% c++ #include "ViewContent.h" %>
 
-<% skin test_skin %>
+<% skin pci_skin %>
 	<% view sign_in_view uses ViewContent::SignInContent extends template_view %>
 	
-		<% template head_links() %>
-			<% include template_view::head_links() %>
+	
+		<% template css_links() %>
+			<% include template_view::css_links() %>
 			<link href="/css/sign_in.css" rel="stylesheet" type="text/css" />
 		<% end template %>
 	
-		<% template body_content() %>
+	
+		<% template page_content() %>
 			<h1>Sign in</h1>
 			<form action="" method="post">
 				<% form as_p form_info %>
 			</form>
 		<% end template %>
+	
 	
 	<% end view %>
 <% end skin %>
