--- a/tmpl/Template.tmpl
+++ b/tmpl/Template.tmpl
@@ -1,28 +1,304 @@
 
 <% c++ #include "ViewContent.h" %>
 
-<% skin test_skin %>
+<% skin pci_skin %>
 	<% view template_view uses ViewContent::TemplateContent %>
-	
-		<% template head_links() %>
-			<link href="/css/template.css" rel="stylesheet" type="text/css" />
+
+
+		<% template clarifications(ClarificationList clarifications) %>
+			<div id="pci_clarifications">
+				<div id="pci_clarifications_main_container">
+					<div class="pci_clarifications_row_container">
+						<div class="pci_clarifications_question_container">
+							<div class="pci_clarifications_column_header" id="pci_clarifications_question_column_header">
+								Question
+							</div>
+						</div>
+						<div class="pci_clarifications_answer_container">
+							<div class="pci_clarifications_column_header" id="pci_clarifications_answer_column_header">
+								Answer
+							</div>
+						</div>
+					</div>
+					<% foreach clarification in *clarifications %>
+	 					<% item %>
+							<div class="pci_clarifications_row_container">
+								<div class="pci_clarifications_question_container">
+									<div class="pci_clarifications_content pci_text_box_0">
+										<%= clarification->question %>
+									</div>
+								</div>
+								<div class="pci_clarifications_answer_container">
+									<div class="pci_clarifications_content pci_text_box_0">
+										<%= clarification->answer %>
+									</div>
+								</div>
+							</div>
+	  					<% end %>
+					<% empty %>
+						There are are no clarifications
+					<% end %>
+				</div>
+			</div>
 		<% end template %>
-	
-		<% template body_header() %>
-			Header content
+
+
+		<% template header_bar() %>
+			<div id="pci_header_bar">
+				<div id="pci_header_bar_main_container">
+					<div id="pci_header_bar_logo_container">
+						PCI Logo
+					</div>
+					<div id="pci_header_bar_button_container">
+						<a class="pci_button_0" href="">
+							<div class="pci_button_0 pci_header_bar_button">
+								Button 1
+							</div>
+						</a>
+						<a class="pci_button_0" href="">
+							<div class="pci_button_0 pci_header_bar_button">
+								Button 2
+							</div>
+						</a>
+					</div>
+				</div>
+			</div>
 		<% end template %>
 		
-		<% template body_content() %>
+		
+		<% template ideas() %>
+			<br />
+			<br />
+			<br />
+			<br />
+			Ideas content
+			<br />
+			<br />
+			<br />
+			<br />
 		<% end template %>
 		
-		<% template body_footer() %>
-			Footer content
+		
+		<% template index() %>
+			<br />
+			<br />
+			<br />
+			<br />
+			Index content
+			<br />
+			<br />
+			<br />
+			<br />
 		<% end template %>
 		
+		
+		<% template information_footer() %>
+			<div id="pci_information_footer">
+				<div id="pci_information_footer_main_container">
+					<div id="pci_information_footer_TO_DEFINE_container">
+						Some information
+					</div>
+					<div id="pci_information_footer_link_container">
+						<div class="pci_information_footer_column_container">
+							<div class="pci_information_footer_column_header">
+								Header 1
+							</div>
+							<div class="pci_information_footer_link">
+								<a class="pci_link_0" href="">
+									Link 1
+								</a>
+							</div>
+							<div class="pci_information_footer_link">
+								<a class="pci_link_0" href="">
+									Link 2
+								</a>
+							</div>
+							<div class="pci_information_footer_link">
+								<a class="pci_link_0" href="">
+									Link 3
+								</a>
+							</div>
+						</div>
+						<div class="pci_information_footer_column_container">
+							<div class="pci_information_footer_column_header">
+								Header 2
+							</div>
+							<div class="pci_information_footer_link">
+								<a class="pci_link_0" href="">
+									Link 1
+								</a>
+							</div>
+							<div class="pci_information_footer_link">
+								<a class="pci_link_0" href="">
+									Link 2
+								</a>
+							</div>
+							<div class="pci_information_footer_link">
+								<a class="pci_link_0" href="">
+									Link 3
+								</a>
+							</div>
+						</div>
+						<div class="pci_information_footer_column_container">
+							<div class="pci_information_footer_column_header">
+								Header 3
+							</div>
+							<div class="pci_information_footer_link">
+								<a class="pci_link_0" href="">
+									Link 1
+								</a>
+							</div>
+							<div class="pci_information_footer_link">
+								<a class="pci_link_0" href="">
+									Link 2
+								</a>
+							</div>
+							<div class="pci_information_footer_link">
+								<a class="pci_link_0" href="">
+									Link 3
+								</a>
+							</div>
+						</div>
+						<div class="pci_information_footer_column_container">
+							<div class="pci_information_footer_column_header">
+								Header 4
+							</div>
+							<div class="pci_information_footer_link">
+								<a class="pci_link_0" href="">
+									Link 1
+								</a>
+							</div>
+							<div class="pci_information_footer_link">
+								<a class="pci_link_0" href="">
+									Link 2
+								</a>
+							</div>
+							<div class="pci_information_footer_link">
+								<a class="pci_link_0" href="">
+									Link 3
+								</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		<% end template %>
+
+
+		<% template navigation_menu() %>
+			<div id="pci_navigation_menu">
+				<div id="pci_navigation_menu_main_container">
+					<div id="pci_navigation_menu_service_container">
+						<a href="">
+							<div class="pci_button_1 pci_navigation_menu_service_button">
+								<div class="pci_button_1_image" id="pci_navigation_menu_problems_button_image"></div>
+								<div class="pci_button_1_text">
+									Problems
+								</div>
+							</div>
+						</a>
+						<a href="">
+							<div class="pci_button_1 pci_navigation_menu_service_button">
+								<div class="pci_button_1_image" id="pci_navigation_menu_ideas_button_image"></div>
+								<div class="pci_button_1_text">
+									Ideas
+								</div>
+							</div>
+						</a>
+					</div>
+					<div id="pci_navigation_menu_option_container">
+						<a href="">
+							<div class="pci_button_1 pci_navigation_menu_option_button">
+								<div class="pci_button_1_image" id="pci_navigation_menu_profile_button_image"></div>
+								<div class="pci_button_1_text">
+									Profile
+								</div>
+							</div>
+						</a>
+					</div>
+				</div>
+			</div>
+		<% end template %>
+		
+		
+		<% template problem(ProblemPointer problem, SolutionPointer accepted_solution, SolutionList solutions) %>
+			<div id="pci_problem">
+				<div id="pci_problem_main_container">
+					<div id="pci_problem_problem_container">
+						<div id="pci_problem_problem_header_container">
+							Header
+						</div>
+						<div class="pci_text_box_0" id="pci_problem_problem_content">
+							Content
+						</div>
+					</div>
+					<div id="pci_problem_solution_container">
+						<% foreach solution in *solutions %>
+		 					<% item %>
+								<div class="pci_problem_solution_content pci_text_box_0">
+									<%= solution->description %>
+								</div>
+		  					<% end %>
+						<% empty %>
+							There are are no solutions
+						<% end %>
+					</div>
+				</div>
+			</div>
+		<% end template %>
+		
+		
+		<% template problems(ProblemList problems) %>
+			<br />
+			<br />
+			<br />
+			<br />
+			Problems content
+			<br />
+			<br />
+			<br />
+			<br />
+			<% foreach problem in *problems %>
+				<% item %>
+					<div onclick="location.href='/pci/problem/<%= problem->id %>'">
+						<%= problem->id %>: <%= problem->description %>
+					</div>
+				<% end %>
+			<% empty %>
+				No problems found
+			<% end %>
+		<% end template %>
+		
+		
+		<% template solution(SolutionPointer solution) %>
+			<br />
+			<br />
+			<br />
+			<br />
+			Solution content
+			<br />
+			<br />
+			<br />
+			<br />
+		<% end template %>
+
+
+		<% template css_links() %>
+			<link href="/css/global.css" rel="stylesheet" type="text/css" />
+			<link href="/css/elements.css" rel="stylesheet" type="text/css" />
+		<% end template %>
+		
+		
+		<% template page_content() %>
+		<% end template %>
+
+
 		<% template render() %>
+			<!DOCTYPE html>
+			
 			<html>
 				<head>
-					<% include head_links() %>
+					<% include css_links() %>
 					
 			    	<title>
 			    		<%= page_title %>
@@ -30,20 +306,11 @@
 				</head>
 				
 				<body>
-					<div id="template_header">
-						<% include body_header() %>
-					</div>
-					
-					<div id="template_content">
-						<% include body_content() %>
-					</div>
-					
-					<div id="template_footer">
-						<% include body_footer() %>
-					</div>
+					<% include page_content() %>
 				</body>
 			</html>
 		<% end template %>
-	
+
+
 	<% end view %>
 <% end skin %>
