--- a/tmpl/Template.tmpl
+++ b/tmpl/Template.tmpl
@@ -46,18 +46,11 @@
 		<% template header_bar() %>
 			<div id="pci_header_bar">
 				<div id="pci_header_bar_main_container">
-					<div id="pci_header_bar_logo_container">
-						PCI Logo
-					</div>
+					<div id="pci_header_bar_logo_container"></div>
 					<div id="pci_header_bar_button_container">
 						<a class="pci_button_0" href="<% url "" %>">
 							<div class="pci_button_0 pci_header_bar_button">
-								Button 1
-							</div>
-						</a>
-						<a class="pci_button_0" href="<% url "" %>">
-							<div class="pci_button_0 pci_header_bar_button">
-								Button 2
+								Ingresar
 							</div>
 						</a>
 					</div>
