--- a/tmpl/SignIn.tmpl
+++ b/tmpl/SignIn.tmpl
@@ -17,7 +17,11 @@
 				<% form as_p form_info %>
 			</form>
 		<% end template %>
+		
+		
+		<% template render_input() %>
 	
+		<% end template %>
 	
 	<% end view %>
 <% end skin %>
