--- a/www/css/header_bar.css
+++ b/www/css/header_bar.css
@@ -6,8 +6,8 @@
 */
 
 #pci_header_bar {
-	background-color:#C9DCA7;
-	box-shadow:0px 1px 4px 0px #3E3E3E, 0px -4px 16px 0px #9DAC83 inset;
+	background-color:#6CA4C8;
+	box-shadow:0px 1px 4px 0px #000000, 0px -4px 16px 0px #3D6A87 inset;
 	height:48px;
 	position:fixed;
 	top:0px;
@@ -21,7 +21,12 @@
 }
 
 #pci_header_bar_logo_container {
+	background-image:url('../img/logo.png');
+	background-position:center center;
+	background-repeat:no-repeat;
 	float:left;
+	height:48px;
+	width:103px;
 }
 
 #pci_header_bar_button_container {
