--- a/tmpl/Index.tmpl
+++ b/tmpl/Index.tmpl
@@ -15,7 +15,15 @@
 	
 		<% template page_content() %>
 			<% include template_view::header_bar() %>
-			<% include template_view::index() %>
+			<div id="pci_index_main_container">
+				<br />
+				<br />
+				<br />
+				Index content
+				<br />
+				<br />
+				<br />
+			</div>
 			<% include template_view::information_footer() %>
 		<% end template %>
 	
