--- a/tmpl/SignIn.tmpl
+++ b/tmpl/SignIn.tmpl
@@ -12,6 +12,8 @@
 	
 	
 		<% template page_content() %>
+			<% include template_view::header_bar() %>
+			<% include template_view::navigation_menu() %>
 			<h1>Sign in</h1>
 			<form action="" method="post">
 				<% form as_p form_info %>
