--- a/tmpl/Template.tmpl
+++ b/tmpl/Template.tmpl
@@ -6,47 +6,48 @@
 
 
 		<% template clarifications(ClarificationList clarifications) %>
-			<div id="pci_clarifications">
-				<div id="pci_clarifications_main_container">
-					<div class="pci_clarifications_row_container">
-						<div class="pci_clarifications_question_container">
-							<div class="pci_clarifications_column_header" id="pci_clarifications_question_column_header">
-								Question
-							</div>
-						</div>
-						<div class="pci_clarifications_answer_container">
-							<div class="pci_clarifications_column_header" id="pci_clarifications_answer_column_header">
-								Answer
-							</div>
+			<div id="pci_clarifications_main_container">
+				<div class="pci_horizontal_line"></div>
+				<div class="pci_clarifications_row_container">
+					<div class="pci_clarifications_question_container">
+						<div class="pci_clarifications_column_header pci_clarifications_question_content">
+							Question
 						</div>
 					</div>
-					<% foreach clarification in *clarifications %>
-	 					<% item %>
-							<div class="pci_clarifications_row_container">
-								<div class="pci_clarifications_question_container">
-									<div class="pci_box_0 pci_clarifications_content">
-										<%= clarification->question %>
-									</div>
-								</div>
-								<div class="pci_clarifications_answer_container">
-									<div class="pci_box_0 pci_clarifications_content">
-										<%= clarification->answer %>
-									</div>
+					<div class="pci_clarifications_answer_container">
+						<div class="pci_clarifications_answer_content pci_clarifications_column_header">
+							Answer
+						</div>
+					</div>
+				</div>
+				<% foreach clarification in *clarifications %>
+ 					<% item %>
+						<div class="pci_clarifications_row_container">
+							<div class="pci_clarifications_question_container">
+								<div class="pci_box_3 pci_clarifications_question_content">
+									<%= clarification->question %>
 								</div>
 							</div>
-	  					<% end %>
-					<% empty %>
-						There are are no clarifications
-					<% end %>
-				</div>
+							<div class="pci_clarifications_answer_container">
+								<div class="pci_box_5 pci_clarifications_answer_content">
+									<%= clarification->answer %>
+								</div>
+							</div>
+						</div>
+  					<% end %>
+				<% empty %>
+					There are are no clarifications
+				<% end %>
 			</div>
 		<% end template %>
 
 
 		<% template header_bar() %>
-			<div id="pci_header_bar">
-				<div id="pci_header_bar_main_container">
-					<div id="pci_header_bar_logo_container"></div>
+			<div id="pci_header_bar_main_container">
+				<div id="pci_header_bar_central_container">
+					<div id="pci_header_bar_logo_container">
+						<div id="pci_header_bar_logo"></div>
+					</div>
 					<div id="pci_header_bar_button_container">
 						<a class="pci_button_0" href="<% url "" %>">
 							<div class="pci_button_0 pci_header_bar_button">
@@ -56,39 +57,12 @@
 					</div>
 				</div>
 			</div>
-			<div id="pci_header_bar_offset_container"></div>
-		<% end template %>
-		
-		
-		<% template ideas() %>
-			<br />
-			<br />
-			<br />
-			<br />
-			Ideas content
-			<br />
-			<br />
-			<br />
-			<br />
-		<% end template %>
-		
-		
-		<% template index() %>
-			<br />
-			<br />
-			<br />
-			<br />
-			Index content
-			<br />
-			<br />
-			<br />
-			<br />
 		<% end template %>
 		
 		
 		<% template information_footer() %>
-			<div id="pci_information_footer">
-				<div id="pci_information_footer_main_container">
+			<div id="pci_information_footer_main_container">
+				<div id="pci_information_footer_central_container">
 					<div id="pci_information_footer_TO_DEFINE_container">
 						Some information
 					</div>
@@ -180,111 +154,38 @@
 
 
 		<% template navigation_menu() %>
-			<div id="pci_navigation_menu">
-				<div id="pci_navigation_menu_main_container">
-					<div id="pci_navigation_menu_service_container">
-						<a href="<% url "/problems" %>">
-							<div class="pci_button_1 pci_navigation_menu_service_button">
-								<div class="pci_button_1_image" id="pci_navigation_menu_problems_button_image"></div>
-								<div class="pci_button_1_text">
-									Problems
-								</div>
-							</div>
-						</a>
-						<a href="<% url "/ideas" %>">
-							<div class="pci_button_1 pci_navigation_menu_service_button">
-								<div class="pci_button_1_image" id="pci_navigation_menu_ideas_button_image"></div>
-								<div class="pci_button_1_text">
-									Ideas
-								</div>
-							</div>
-						</a>
-					</div>
-					<div id="pci_navigation_menu_option_container">
-						<a href="<% url "" %>">
-							<div class="pci_button_1 pci_navigation_menu_option_button">
-								<div class="pci_button_1_image" id="pci_navigation_menu_profile_button_image"></div>
-								<div class="pci_button_1_text">
-									Profile
-								</div>
-							</div>
-						</a>
-					</div>
-				</div>
-			</div>
-		<% end template %>
-		
-		
-		<% template problem(ProblemPointer problem, SolutionPointer accepted_solution, SolutionList solutions) %>
-			<div id="pci_problem">
-				<div id="pci_problem_main_container">
-					<div id="pci_problem_problem_container">
-						<div id="pci_problem_problem_header_container">
-							Header (extra info about the Problem)
-						</div>
-						<div class="pci_box_0" id="pci_problem_problem_content">
-							<%= problem->content %>
+			<div id="pci_navigation_menu_main_container">
+				<a href="<% url "/problems" %>">
+					<div class="pci_button_1 pci_navigation_menu_button" id="pci_navigation_menu_problems_button">
+						<div class="pci_button_1_image" id="pci_navigation_menu_problems_button_image"></div>
+						<div class="pci_button_1_text">
+							Problems
 						</div>
 					</div>
-					<div id="pci_problem_solution_container">
-						<% foreach solution in *solutions %>
-		 					<% item %>
-		 						<a class="pci_box_0" href="<% url "/solution" using solution->id %>">
-									<div class="pci_box_0 pci_problem_solution_description">
-										<%= solution->description %>
-									</div>
-								</a>
-		  					<% end %>
-						<% empty %>
-							There are are no solutions
-						<% end %>
+				</a>
+				<a href="<% url "/ideas" %>">
+					<div class="pci_button_1 pci_navigation_menu_button" id="pci_navigation_menu_ideas_button">
+						<div class="pci_button_1_image" id="pci_navigation_menu_ideas_button_image"></div>
+						<div class="pci_button_1_text">
+							Ideas
+						</div>
 					</div>
-				</div>
-			</div>
-		<% end template %>
-		
-		
-		<% template problems(ProblemList problems) %>
-			<br />
-			<br />
-			<br />
-			<br />
-			<div id="pci_problems">
-				<div id="pci_problems_main_container">
-					<div class="pci_box_2" id="pci_problems_problem_container">
-						<% foreach problem in *problems %>
-							<% item %>
-								<a class="pci_box_1" href="<% url "/problem" using problem->id %>">
-									<div class="pci_box_1 pci_problems_problem_description">
-										<%= problem->description %>
-									</div>
-								</a>
-							<% end %>
-						<% empty %>
-							No problems found
-						<% end %>
+				</a>
+				<a href="<% url "" %>">
+					<div class="pci_button_1 pci_navigation_menu_button" id="pci_navigation_menu_profile_button">
+						<div class="pci_button_1_image" id="pci_navigation_menu_profile_button_image"></div>
+						<div class="pci_button_1_text">
+							Profile
+						</div>
 					</div>
-				</div>
+				</a>
 			</div>
-		<% end template %>
-		
-		
-		<% template solution(SolutionPointer solution) %>
-			<br />
-			<br />
-			<br />
-			<br />
-			<%= solution->content %>
-			<br />
-			<br />
-			<br />
-			<br />
 		<% end template %>
 
 
 		<% template css_links() %>
-			<link href="/css/global.css" rel="stylesheet" type="text/css" />
 			<link href="/css/elements.css" rel="stylesheet" type="text/css" />
+			<link href="/css/global.css" rel="stylesheet" type="text/css" />
 		<% end template %>
 		
 		
