--- a/www/css/elements.css
+++ b/www/css/elements.css
@@ -47,6 +47,66 @@ div.pci_box_2 {
 	padding:4px;
 }
 
+div.pci_box_3 {
+	background-color:#FFFFFF;
+	border-color:#D0D0D0;
+	border-radius:8px;
+	border-style:solid;
+	border-width:1px;
+	padding:8px;
+}
+
+div.pci_box_3:hover {
+	border-color:#B5B5B5;
+}
+
+div.pci_box_4 {
+	background-color:#FFFFFF;
+	border-color:#D0D0D0;
+	border-radius:8px;
+	border-style:solid;
+	border-width:1px;
+	padding:8px;
+}
+
+div.pci_box_4:hover {
+	border-color:#B5B5B5;
+}
+
+a.pci_box_4 {
+	/* TO DEFINE */
+}
+
+div.pci_box_5 {
+	background-color:#FFFFFF;
+	border-color:#D0D0D0;
+	border-radius:8px;
+	border-style:solid;
+	border-width:1px;
+	padding:8px;
+}
+
+div.pci_box_5:hover {
+	border-color:#B5B5B5;
+}
+
+div.pci_box_6 {
+	background-color:#00FF00;
+	border-color:#D0D0D0;
+	border-radius:8px;
+	border-style:solid;
+	border-width:1px;
+	padding:8px;
+}
+
+div.pci_box_6:hover {
+	border-color:#B5B5B5;
+}
+
+a.pci_box_6 {
+	/* TO DEFINE */
+}
+
 div.pci_button_0 {
 	background-color:#FFFFFF;
 	border-color:#C2C2C2;
@@ -54,7 +114,7 @@ div.pci_button_0 {
 	border-style:solid;
 	border-width:1px;
 	box-shadow:0px -4px 8px 0px #D1D1D1 inset;
-	height:28px;
+	height:26px;
 	line-height:28px;
 	padding:0px 16px;
 }
@@ -74,8 +134,8 @@ div.pci_button_1 {
 	border-radius:8px;
 	border-style:solid;
 	border-width:1px;
-	height:96px;
-	width:96px;
+	height:95px;
+	width:95px;
 }
 
 div.pci_button_1:hover {
@@ -93,6 +153,15 @@ div.pci_button_1_text {
 
 div.pci_button_1:hover div.pci_button_1_text {
 	color:#444444;
+}
+
+div.pci_horizontal_line {
+	border-color:#D3D3D3;
+	border-style:solid;
+	border-width:0px 0px 1px 0px;
+	clear:both;
+	height:16px;
+	width:100%;
 }
 
 a.pci_link_0 {
