--- a/www/css/information_footer.css
+++ b/www/css/information_footer.css
@@ -5,15 +5,15 @@
 ----------------------------------------------------------------------------------------------
 */
 
-#pci_information_footer {
-	box-shadow:0px -1px 4px 0px #A8A8A8; /* TO DEFINE */
+#pci_information_footer_main_container {
+	box-shadow:0px -1px 2px 0px #A8A8A8; /* TO DEFINE */
 	width:100%;
 }
 
-#pci_information_footer_main_container {
-	clear:both;
-	margin:0px auto;
-	width:1024px;
+#pci_information_footer_central_container {
+	margin:0px 128px;
+	min-width:1024px;
+	overflow:hidden;
 }
 
 #pci_information_footer_TO_DEFINE_container { /* TO DEFINE : name */
@@ -25,7 +25,7 @@
 }
 
 div.pci_information_footer_column_container {
-	float:left;
+	float:right;
 	width:144px;
 }
 
