--- a/www/css/navigation_menu.css
+++ b/www/css/navigation_menu.css
@@ -5,30 +5,17 @@
 ----------------------------------------------------------------------------------------------
 */
 
-#pci_navigation_menu {
-	width:100%;
-}
-
 #pci_navigation_menu_main_container {
-	clear:both;
-	margin:0px auto;
-	width:1280px;
+	left:128px;
+	position:fixed;
+	top:48px;
 }
 
-#pci_navigation_menu_service_container {
-	float:left;
+div.pci_navigation_menu_button {
+	margin-top:16px;
 }
 
-#pci_navigation_menu_option_container {
-	float:right;
-}
-
-div.pci_navigation_menu_service_button {
-	float:left;
-	margin:8px 8px 8px 0px;
-}
-
-div.pci_navigation_menu_service_button:hover {
+#pci_navigation_menu_problems_button:hover {
 	box-shadow:0px 0px 64px 0px #EAE1B5 inset;
 }
 
@@ -38,8 +25,12 @@ div.pci_navigation_menu_service_button:hover {
 	background-repeat:no-repeat;
 }
 
-div.pci_navigation_menu_service_button:hover #pci_navigation_menu_problems_button_image {
+div.pci_navigation_menu_button:hover #pci_navigation_menu_problems_button_image {
 	background-image:url('../img/problems_color.png');
+}
+
+#pci_navigation_menu_ideas_button:hover {
+	box-shadow:0px 0px 64px 0px #EAE1B5 inset;
 }
 
 #pci_navigation_menu_ideas_button_image {
@@ -48,16 +39,11 @@ div.pci_navigation_menu_service_button:hover #pci_navigation_menu_problems_butto
 	background-repeat:no-repeat;
 }
 
-div.pci_navigation_menu_service_button:hover #pci_navigation_menu_ideas_button_image {
+div.pci_navigation_menu_button:hover #pci_navigation_menu_ideas_button_image {
 	background-image:url('../img/ideas_color.png');
 }
 
-div.pci_navigation_menu_option_button {
-	float:right;
-	margin:8px 0px 8px 8px;
-}
-
-div.pci_navigation_menu_option_button:hover {
+#pci_navigation_menu_profile_button:hover {
 	box-shadow:0px 0px 64px 0px #CCEACD inset;
 }
 
@@ -67,6 +53,6 @@ div.pci_navigation_menu_option_button:hover {
 	background-repeat:no-repeat;
 }
 
-div.pci_navigation_menu_option_button:hover #pci_navigation_menu_profile_button_image {
+div.pci_navigation_menu_button:hover #pci_navigation_menu_profile_button_image {
 	background-image:url('../img/profile_color.png');
 }
