--- a/tmpl/Template.tmpl
+++ b/tmpl/Template.tmpl
@@ -49,7 +49,7 @@
 						<div id="pci_header_bar_logo"></div>
 					</div>
 					<div id="pci_header_bar_button_container">
-						<a class="pci_button_0" href="<% url "" %>">
+						<a class="pci_button_0" href="<% url "/sign_in" %>">
 							<div class="pci_button_0 pci_header_bar_button">
 								Ingresar
 							</div>
