access from LAN (not tested) html, css work sign_in form working (with bugs)

--- a/tmpl/Index.tmpl
+++ b/tmpl/Index.tmpl
@@ -14,6 +14,7 @@
 	
 	
 		<% template page_content() %>
+			<div class="wrapper">
 			<% include template_view::header_bar() %>
 			<div id="pci_index_main_container">
 				<br />
@@ -25,6 +26,7 @@
 				<br />
 			</div>
 			<% include template_view::information_footer() %>
+			</div>
 		<% end template %>
 	
 	
