--- a/www/css/navigation_menu.css
+++ b/www/css/navigation_menu.css
@@ -25,7 +25,7 @@ div.pci_navigation_menu_button {
 	background-repeat:no-repeat;
 }
 
-div.pci_navigation_menu_button:hover #pci_navigation_menu_problems_button_image {
+div.pci_navigation_menu_button:hover #pci_navigation_menu_problems_button_image, #pci_navigation_menu_problems_button_image.active {
 	background-image:url('../img/problems_color.png');
 }
 
@@ -39,7 +39,7 @@ div.pci_navigation_menu_button:hover #pci_navigation_menu_problems_button_image 
 	background-repeat:no-repeat;
 }
 
-div.pci_navigation_menu_button:hover #pci_navigation_menu_ideas_button_image {
+div.pci_navigation_menu_button:hover  #pci_navigation_menu_ideas_button_image, #pci_navigation_menu_ideas_button_image.active {
 	background-image:url('../img/ideas_color.png');
 }
 
@@ -53,6 +53,6 @@ div.pci_navigation_menu_button:hover #pci_navigation_menu_ideas_button_image {
 	background-repeat:no-repeat;
 }
 
-div.pci_navigation_menu_button:hover #pci_navigation_menu_profile_button_image {
+div.pci_navigation_menu_button:hover #pci_navigation_menu_profile_button_image, #pci_navigation_menu_profile_button_image.active {
 	background-image:url('../img/profile_color.png');
 }
