Added jquery New template build bash file called as a pre-build step together with killall pci_server

--- a/tmpl/Problems.tmpl
+++ b/tmpl/Problems.tmpl
@@ -16,6 +16,11 @@
 		<% template page_content() %>
 			<% include template_view::header_bar() %>
 			<% include template_view::navigation_menu() %>
+			
+			<script type="text/javascript">
+				$('#pci_navigation_menu_problems_button').addClass('active');
+			</script>
+			
 			<div id="pci_problems_main_container">
 				<div class="pci_box_2" id="pci_problems_problem_container">
 					<% foreach problem in *problems %>
