--- a/tmpl/Template.tmpl
+++ b/tmpl/Template.tmpl
@@ -196,6 +196,7 @@
 		<% template css_links() %>
 			<link href="/css/elements.css" rel="stylesheet" type="text/css" />
 			<link href="/css/global.css" rel="stylesheet" type="text/css" />
+			<script type="text/javascript" src="/js/jquery-1.9.0.min.js"></script>
 		<% end template %>
 		
 		
