--- a/tmpl/SignUp.tmpl
+++ b/tmpl/SignUp.tmpl
@@ -2,28 +2,30 @@
 <% c++ #include "ViewContent.h" %>
 
 <% skin pci_skin %>
-	<% view ideas_view uses ViewContent::IdeasContent extends template_view %>
+	<% view sign_up_view uses ViewContent::SignUpContent extends template_view %>
 	
 	
 		<% template css_links() %>
 			<% include template_view::css_links() %>
-			<link href="/css/ideas.css" rel="stylesheet" type="text/css" />
+			<link href="/css/problems.css" rel="stylesheet" type="text/css" />
 		<% end template %>
 	
 	
 		<% template page_content() %>
 			<% include template_view::header_bar() %>
 			<% include template_view::navigation_menu() %>
-			
-			<script type="text/javascript">
-				$('#pci_navigation_menu_ideas_button').addClass('active');
-			</script>
-			
-			<div id="pci_ideas_main_container">
-				Ideas content
+			<div id="pci_problems_main_container">
+				<h1>Registrar</h1>
+				<form action="" method="post">
+					<% form as_p form_info %>
+				</form>
 			</div>
 		<% end template %>
+		
+		
+		<% template render_input() %>
 	
+		<% end template %>
 	
 	<% end view %>
 <% end skin %>
