Profile View! css touchs, and refactoring

--- a/tmpl/Ideas.tmpl
+++ b/tmpl/Ideas.tmpl
@@ -19,8 +19,10 @@
 				$('#pci_navigation_menu_ideas_button').addClass('active');
 			</script>
 			
-			<div id="pci_ideas_main_container">
-				Ideas content
+			<div id="main_content_container">
+				<div class="pci_box_2" >
+					Ideas content
+				</div>
 			</div>
 		<% end template %>
 	
