--- a/tmpl/Index.tmpl
+++ b/tmpl/Index.tmpl
@@ -15,7 +15,7 @@
 		<% template page_content() %>
 			<div class="wrapper">
 			<% include template_view::header_bar() %>
-			<div id="pci_index_main_container">
+			<div id="main_content_container">
 				<br />
 				<br />
 				<br />
