--- a/tmpl/SignUp.tmpl
+++ b/tmpl/SignUp.tmpl
@@ -7,18 +7,19 @@
 	
 		<% template css_links() %>
 			<% include template_view::css_links() %>
-			<link href="/css/problems.css" rel="stylesheet" type="text/css" />
 		<% end template %>
 	
 	
 		<% template page_content() %>
 			<% include template_view::header_bar() %>
 			<% include template_view::navigation_menu() %>
-			<div id="pci_problems_main_container">
-				<h1>Registrar</h1>
-				<form action="" method="post">
-					<% form as_p form_info %>
-				</form>
+			<div id="main_content_container">
+				<div class="pci_box_2" >
+					<h1>Registrar</h1>
+					<form action="" method="post">
+						<% form as_p form_info %>
+					</form>
+				</div>
 			</div>
 		<% end template %>
 		
