--- a/tmpl/Template.tmpl
+++ b/tmpl/Template.tmpl
@@ -194,14 +194,16 @@
 						</div>
 					</div>
 				</a>
-				<a href="<% url "" %>">
-					<div class="pci_button_1 pci_navigation_menu_button" id="pci_navigation_menu_profile_button">
-						<div class="pci_button_1_image" id="pci_navigation_menu_profile_button_image"></div>
-						<div class="pci_button_1_text">
-							Profile
+				<% if user_logged %>
+					<a href="<% url "/profile" %>">
+						<div class="pci_button_1 pci_navigation_menu_button" id="pci_navigation_menu_profile_button">
+							<div class="pci_button_1_image" id="pci_navigation_menu_profile_button_image"></div>
+							<div class="pci_button_1_text">
+								Profile
+							</div>
 						</div>
-					</div>
-				</a>
+					</a>
+				<% end %>
 			</div>
 		<% end template %>
 		
