--- a/www/css/elements.css
+++ b/www/css/elements.css
@@ -5,6 +5,13 @@
 ----------------------------------------------------------------------------------------------
 */
 
+
+/* Main content div, for all pages */
+#main_content_container {
+	min-width:912px;
+	padding:64px 128px 0px 240px;
+}
+
 div.pci_box_0 {
 	background-color:#FFFFFF;
 	border-color:#D0D0D0;
@@ -23,19 +30,20 @@ a.pci_box_0 {
 }
 
 div.pci_box_1 {
-	background-color:#9fa2a4;
+	background-color:transparent;
 	border-radius:8px;
 	border-width:0px;
-	box-shadow:0px 0px 16px 0px #366380 inset;
+	box-shadow:0px 0px 5px 0px #979797 inset;
 	padding:8px;
 }
 
 div.pci_box_1:hover {
-	background-color:#abbbc6;
+	background-color:#dbe7e7;
 }
 
 a.pci_box_1 {
 	/* TO DEFINE */
+	text-decoration: none;
 }
 
 div.pci_box_2 {
@@ -44,7 +52,7 @@ div.pci_box_2 {
 	border-radius:8px;
 	border-style:solid;
 	border-width:1px;
-	padding:4px;
+	padding:15px;
 }
 
 div.pci_box_3 {
@@ -138,7 +146,7 @@ div.pci_button_1 {
 	width:95px;
 }
 
-div.pci_button_1:hover {
+div.pci_button_1:hover, div.pci_button_1.active{
 	border-color:#B5B5B5;
 }
 
@@ -153,6 +161,10 @@ div.pci_button_1_text {
 
 div.pci_button_1:hover div.pci_button_1_text {
 	color:#444444;
+}
+
+div.pci_button_1.active div.pci_button_1_text {
+	color: #444444;
 }
 
 div.pci_horizontal_line {
