--- a/www/css/navigation_menu.css
+++ b/www/css/navigation_menu.css
@@ -15,8 +15,8 @@ div.pci_navigation_menu_button {
 	margin-top:16px;
 }
 
-#pci_navigation_menu_problems_button:hover {
-	box-shadow:0px 0px 64px 0px #EAE1B5 inset;
+#pci_navigation_menu_problems_button:hover, #pci_navigation_menu_problems_button.active {
+	box-shadow:0px 0px 64px 0px #FFF857 inset;
 }
 
 #pci_navigation_menu_problems_button_image {
@@ -33,7 +33,7 @@ div.pci_navigation_menu_button.active #pci_navigation_menu_problems_button_image
 	background-image:url('../img/problems_color.png');
 }
 
-#pci_navigation_menu_ideas_button:hover {
+#pci_navigation_menu_ideas_button:hover, #pci_navigation_menu_ideas_button.active {
 	box-shadow:0px 0px 64px 0px #EAE1B5 inset;
 }
 
@@ -51,7 +51,7 @@ div.pci_navigation_menu_button.active  #pci_navigation_menu_ideas_button_image{
 	background-image:url('../img/ideas_color.png');
 }
 
-#pci_navigation_menu_profile_button:hover {
+#pci_navigation_menu_profile_button:hover, #pci_navigation_menu_profile_button.active {
 	box-shadow:0px 0px 64px 0px #CCEACD inset;
 }
 
@@ -61,6 +61,10 @@ div.pci_navigation_menu_button.active  #pci_navigation_menu_ideas_button_image{
 	background-repeat:no-repeat;
 }
 
-div.pci_navigation_menu_button:hover #pci_navigation_menu_profile_button_image, #pci_navigation_menu_profile_button_image.active {
+div.pci_navigation_menu_button:hover #pci_navigation_menu_profile_button_image {
+	background-image:url('../img/profile_color.png');
+}
+
+div.pci_navigation_menu_button.active  #pci_navigation_menu_profile_button_image{
 	background-image:url('../img/profile_color.png');
 }
