--- a/tmpl/Problems.tmpl
+++ b/tmpl/Problems.tmpl
@@ -20,6 +20,7 @@
 			</script>
 			
 			<div id="main_content_container">
+				<% include template_view::toolbar() %>
 				<div class="pci_box_2" id="pci_problems_problem_container">
 					<% foreach problem in *problems %>
 						<% item %>
