--- a/www/css/elements.css
+++ b/www/css/elements.css
@@ -142,29 +142,31 @@ div.pci_button_1 {
 	border-radius:8px;
 	border-style:solid;
 	border-width:1px;
-	height:95px;
-	width:95px;
-}
-
-div.pci_button_1:hover, div.pci_button_1.active{
-	border-color:#B5B5B5;
-}
-
-div.pci_button_1_image {
-	height:68px;
-}
-
-div.pci_button_1_text {
 	color:#7A7A7A;
+	font-size:0.875em;
+	height:30px;
+	padding-top:64px;
 	text-align:center;
+	width:94px;
 }
 
-div.pci_button_1:hover div.pci_button_1_text {
+div.pci_button_1:hover {
+	border-color:#B5B5B5;
 	color:#444444;
 }
 
-div.pci_button_1.active div.pci_button_1_text {
+div.pci_button_1.active {
+	background-color:#FFFFFF;
+	border-color:#B5B5B5;
+	border-radius:8px;
+	border-style:solid;
+	border-width:1px;
 	color: #444444;
+	font-size:0.875em;
+	height:30px;
+	padding-top:64px;
+	text-align:center;
+	width:94px;
 }
 
 div.pci_horizontal_line {
