--- a/www/css/navigation_menu.css
+++ b/www/css/navigation_menu.css
@@ -15,56 +15,56 @@ div.pci_navigation_menu_button {
 	margin-top:16px;
 }
 
-#pci_navigation_menu_problems_button:hover, #pci_navigation_menu_problems_button.active {
-	box-shadow:0px 0px 64px 0px #FFF857 inset;
-}
-
-#pci_navigation_menu_problems_button_image {
+#pci_navigation_menu_problems_button {
 	background-image:url('../img/problems_grayscale.png');
 	background-position:center center;
 	background-repeat:no-repeat;
 }
 
-div.pci_navigation_menu_button:hover #pci_navigation_menu_problems_button_image {
+#pci_navigation_menu_problems_button:hover {
 	background-image:url('../img/problems_color.png');
+	box-shadow:0px 0px 64px 0px #FFF857 inset;
 }
 
-div.pci_navigation_menu_button.active #pci_navigation_menu_problems_button_image {
+#pci_navigation_menu_problems_button.active {
 	background-image:url('../img/problems_color.png');
+	background-position:center center;
+	background-repeat:no-repeat;
+	box-shadow:0px 0px 64px 0px #FFF857 inset;
 }
 
-#pci_navigation_menu_ideas_button:hover, #pci_navigation_menu_ideas_button.active {
-	box-shadow:0px 0px 64px 0px #EAE1B5 inset;
-}
-
-#pci_navigation_menu_ideas_button_image {
+#pci_navigation_menu_ideas_button {
 	background-image:url('../img/ideas_grayscale.png');
 	background-position:center center;
 	background-repeat:no-repeat;
 }
 
-div.pci_navigation_menu_button:hover  #pci_navigation_menu_ideas_button_image{
+#pci_navigation_menu_ideas_button:hover {
 	background-image:url('../img/ideas_color.png');
+	box-shadow:0px 0px 64px 0px #EAE1B5 inset;
 }
 
-div.pci_navigation_menu_button.active  #pci_navigation_menu_ideas_button_image{
+#pci_navigation_menu_ideas_button.active {
 	background-image:url('../img/ideas_color.png');
+	background-position:center center;
+	background-repeat:no-repeat;
+	box-shadow:0px 0px 64px 0px #EAE1B5 inset;
 }
 
-#pci_navigation_menu_profile_button:hover, #pci_navigation_menu_profile_button.active {
-	box-shadow:0px 0px 64px 0px #CCEACD inset;
-}
-
-#pci_navigation_menu_profile_button_image {
+#pci_navigation_menu_profile_button {
 	background-image:url('../img/profile_grayscale.png');
 	background-position:center center;
 	background-repeat:no-repeat;
 }
 
-div.pci_navigation_menu_button:hover #pci_navigation_menu_profile_button_image {
+#pci_navigation_menu_profile_button:hover {
 	background-image:url('../img/profile_color.png');
+	box-shadow:0px 0px 64px 0px #CCEACD inset;
 }
 
-div.pci_navigation_menu_button.active  #pci_navigation_menu_profile_button_image{
+#pci_navigation_menu_profile_button.active {
 	background-image:url('../img/profile_color.png');
+	background-position:center center;
+	background-repeat:no-repeat;
+	box-shadow:0px 0px 64px 0px #CCEACD inset;
 }
